--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   cloud_firestore: ^6.0.1
   modal_progress_hud_nsn: ^0.5.1
   supabase_flutter: ^2.10.1
+  flutter_localization: ^0.3.3
+  firebase_auth: ^5.6.2
 
 dev_dependencies:
   flutter_lints: ^5.0.0
@@ -28,3 +30,4 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  generate: true
