--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,7 +8,7 @@ environment:
 
 dependencies:
   dartz: ^0.10.1
-  firebase_core: ^4.1.0
+  firebase_core: ^4.4.0
   firebase_storage: ^13.0.1
   flutter:
     sdk: flutter
@@ -21,7 +21,9 @@ dependencies:
   modal_progress_hud_nsn: ^0.5.1
   supabase_flutter: ^2.10.1
   flutter_localization: ^0.3.3
-  firebase_auth: ^5.6.2
+  firebase_auth: ^6.1.4
+  pin_code_fields: ^8.0.1
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_lints: ^5.0.0
