--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   firebase_auth: ^6.1.4
   pin_code_fields: ^8.0.1
   equatable: ^2.0.5
+  url_launcher_ios: ^6.3.6
+  url_launcher: ^6.3.2
 
 dev_dependencies:
   flutter_lints: ^5.0.0
